--- a/index.css
+++ b/index.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Inter', sans-serif;
+    background-color: #f5f5f5;
+    font-size: 24px;
+}
