--- a/index.css
+++ b/index.css
@@ -5,8 +5,62 @@
 }
 
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     background-color: #f5f5f5;
-    font-size: 24px;
+    font-size: 2rem;
     color: #2c2c2c;
+}
+
+.group_content {
+    display: flex;
+    width: 100%;
+    height: 800px;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 31px;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title {
+    color: #2c2c2c;
+
+    text-align: center;
+    font-family: "Inter";
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.quote {
+    color: #2c2c2c;
+
+    text-align: center;
+    font-family: "Inter";
+    font-size: 2rem;
+    font-style: italic;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.team_image {
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.team_image img {
+    width: 80%;
+    height: 500px;
+    border-radius: 2rem;
+    border: 3px solid #57c5b6;
+    justify-content: center;
+    align-items: center;
 }
