--- a/index.css
+++ b/index.css
@@ -10,3 +10,59 @@ body {
     font-size: 24px;
     color: #2c2c2c;
 }
+
+.member-section {
+    background-color: #F7F7FA;
+    width: 100vw;
+    height: 100vh;
+}
+
+.card-container {
+    width: fit-content;
+    height: 100%;
+    margin-top: 4rem;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-items: center;
+    gap: 8rem;
+    margin: 4rem auto 0;
+}
+
+.card {
+    width: 16rem;
+    height: 20rem;
+    border-radius: 1.25rem;
+    background-size: cover;
+    position: relative;
+    box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
+#binh {
+    background-image: url(images/mem.png);
+}
+
+#tai {
+    background-image: url(images/mem.png);
+}
+
+#van {
+    background-image: url(images/mem.png);
+}
+
+.info {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    border-radius: 0 0rem 1.25rem 1.25rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
+
+.info .name {
+    font-weight: 600;
+}
