--- a/index.css
+++ b/index.css
@@ -34,8 +34,8 @@ body {
     width: 100%;
     height: 100vh;
     align-items: center;
-    gap: 8rem;
-    padding: 0 2rem;
+    gap: 15vh;
+    padding: 0 5vh;
 }
 
 .image {
@@ -45,11 +45,8 @@ body {
 
 .typograpgy{
     color: #2C2C2C;
-    font-family: "Inter", sans-serif;
-    font-size: 8rem;
-    font-style: normal;
+    font-size: 18vh;
     font-weight: 700;
-    line-height: normal;
     letter-spacing: -0.17rem;
 }
 
@@ -65,7 +62,7 @@ body {
 .text {
     color: #000;
     text-align: justify;
-    font-size: 2rem;
+    font-size: 4.5vh;
     font-weight: 400;
 }
 
@@ -76,7 +73,7 @@ body {
     padding: 3rem 2rem;
     flex-direction: column;
     align-items: center;
-    gap: 31px;
+    gap: 5vh;
     flex-shrink: 0;
     display: flex;
     justify-content: center;
@@ -86,10 +83,8 @@ body {
 .title {
     color: #2c2c2c;
     text-align: center;
-    font-size: 1.7rem;
-    font-style: normal;
+    font-size: 5vh;
     font-weight: 700;
-    line-height: normal;
     text-transform: uppercase;
 }
 
@@ -130,15 +125,16 @@ body {
     display: grid;
     grid-template-columns: auto auto auto;
     justify-items: center;
-    gap: 8rem;
+    gap: 15vh;
     margin: 4rem auto 0;
 }
 
 .card {
-    width: 16rem;
-    height: 20rem;
+    width: 20vw;
+    height: 60vh;
     border-radius: 1.25rem;
     background-size: cover;
+    background-position: center;
     position: relative;
     box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.25);
 }
