--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ body {
     font-weight: 400;
 }
 
-.group_content {
+.group-content {
     display: flex;
     width: 100%;
     height: 100vh;
@@ -95,13 +95,13 @@ body {
     line-height: normal;
 }
 
-.team_image {
+.team-image {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.team_image img {
+.team-image img {
     width: 80%;
     height: auto;
     border-radius: 2rem;
