--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body {
     left: 2rem;
 }
 
-.main-section {
+#main-section {
     display: flex;
     width: 100%;
     height: 100vh;
@@ -66,7 +66,7 @@ body {
     font-weight: 400;
 }
 
-.group-content {
+#group-content {
     display: flex;
     width: 100%;
     height: 100vh;
@@ -110,7 +110,7 @@ body {
     align-items: center;
 }
 
-.member-section {
+#member-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -168,4 +168,37 @@ body {
 
 .info .name {
     font-weight: 600;
+}
+
+.nav-bar {
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    background-color: rgba(63, 112, 133);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+}
+
+.nav-bar .btv {
+    font-size: 2rem;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.menu-list {
+    display: flex;
+    gap: 5rem;
+    font-weight: 600;
+}
+
+.menu-item:hover {
+    color: var(--primary-color);
+    border-bottom: var(--primary-color) 2px solid;
 }
