--- a/index.css
+++ b/index.css
@@ -144,7 +144,7 @@ body {
 }
 
 #tai {
-    background-image: url(images/mem.png);
+    background-image: url(images/phuoctai.png);
 }
 
 #van {
@@ -163,7 +163,7 @@ body {
     flex-direction: column;
     gap: 1rem;
     align-items: center;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 .info .name {
@@ -224,7 +224,7 @@ body {
 
 .image-info{
     width: 100%;
-    height: 35vh;
+    height: 25rem;
     object-fit: cover;
     object-position: 0% 0%;
 }
