--- a/index.css
+++ b/index.css
@@ -248,7 +248,7 @@ body {
 
 .nav-bar {
     width: 100%;
-    height: 10vh;
+    height: 4rem;
     position: fixed;
     display: flex;
     justify-content: space-between;
