--- a/index.css
+++ b/index.css
@@ -137,6 +137,11 @@ body {
     background-position: center;
     position: relative;
     box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.25);
+    transition: all 0.3s ease-in-out;
+}
+
+.card:hover {
+    transform: scale(1.1);
 }
 
 #binh {
@@ -241,7 +246,7 @@ body {
 
 .nav-bar {
     width: 100%;
-    height: 10vh;
+    height: 4rem;
     position: fixed;
     display: flex;
     justify-content: space-between;
