info vo quoc binh

--- a/index.css
+++ b/index.css
@@ -147,7 +147,7 @@ body {
 }
 
 #binh {
-    background-image: url(images/mem.png);
+    background-image: url(./member/21127233/image/qbinh.jpg);
 }
 
 #tai {
