--- a/index.css
+++ b/index.css
@@ -143,11 +143,11 @@ a {
 }
 
 #tai {
-    background-image: url(images/phuoctai.png);
+    background-image: url(./member/21127419/image/phuoctai.png);
 }
 
 #van {
-    background-image: url(./images/thanhvan.jpg);
+    background-image: url(./member/21127478/image/thanhvan.jpg);
 }
 
 .info-card {
